--- a/cdk-seis/requirements.txt
+++ b/cdk-seis/requirements.txt
@@ -1,5 +1,6 @@
 aws-cdk-lib==2.17.0
 constructs>=10.0.0,<11.0.0
 
-cdk_ec2_key_pair
+cdk_ec2_key_pair>=2.0.0  # $pip install cdk-ec2-key-pair
 aws_ssm
+cdk-iam-floyd>=0.300.0  #AWS IAM policy statement generator. Extends iam.PolicyStatement
